// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses correctly 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    <ExpenseListItem
      amount={100}
      createdAt={2000}
      description="water bill"
      id="1"
      key="1"
    />
    <ExpenseListItem
      amount={2000}
      createdAt={4200}
      description="rent bill"
      id="2"
      key="2"
    />
    <ExpenseListItem
      amount={500}
      createdAt={3000}
      description="electricity bill"
      id="3"
      key="3"
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`should render ExpenseList without expenses 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    <ExpenseListItem />
  </ForwardRef>
</ForwardRef>
`;

exports[`should render ExpenseList without expenses props 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </ForwardRef>
    <ForwardRef
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    <ExpenseListItem />
  </ForwardRef>
</ForwardRef>
`;
